# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
scripts/: db_init.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
